--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
   </div>
 
   <div id="chatContainer" class="container">
+    <div id="chatList" style="display:none;">
+  <h3>Сохранённые чаты</h3>
+  <ul id="chatListItems" style="list-style:none; padding:0;"></ul>
+</div>
     <div id="chatList">
       <h3>Чаты</h3>
       <ul id="chatListItems" style="list-style:none; padding-left:0; margin:0;"></ul>
